--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Who's working today? - Pusaq</title>
   <link rel="stylesheet" href="styles/index.css">
+  <link rel="stylesheet" href="styles/index.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -21,19 +23,23 @@
   <!-- Floating comments overlay -->
   <div id="floating-comments-container"></div>
 
-  <!-- Funciones de backend -->
-  <script src="backend.js"></script>
+  <!-- Ahora usamos módulos -->
+  <script type="module">
+    import { getAllUsers, login, getUser } from './firebase.js';
 
-  <script>
     document.addEventListener("DOMContentLoaded", async () => {
       try {
         console.log("Cargando usuarios...");
-        const users = await UserAPI.getAll();
+        const users = await getAllUsers();
         console.log("Usuarios cargados:", users);
         renderUsers(users);
       } catch (err) {
         console.error("Error al obtener usuarios:", err);
-        alert("No se pudieron cargar los usuarios.");
+        Swal.fire({
+          icon: 'error',
+          title: 'Oops...',
+          text: 'No se pudieron cargar los usuarios.'
+        });
       }
     });
 
@@ -56,28 +62,68 @@
     }
 
     async function promptPasswordAndLogin(user) {
-      const password = prompt(`Ingresa la contraseña para ${user.name}:`);
-      if (!password) return;
+      const { value: password } = await Swal.fire({
+        title: `Contraseña para ${user.name}`,
+        input: 'password',
+        inputLabel: 'Ingresa tu contraseña',
+        inputPlaceholder: 'Contraseña',
+        inputAttributes: {
+          maxlength: 50,
+          autocapitalize: 'off',
+          autocorrect: 'off'
+        },
+        showCancelButton: true,
+        confirmButtonText: 'Ingresar'
+      });
+
+      if (!password) return; // Si canceló o no ingresó nada
 
       try {
-        const data = await AuthAPI.login(user.email, password);  // Autenticación
+        // Login a través de Firebase Auth
+        const authUser = await login(user.email, password);
 
-        // Verificamos el rol del usuario
-        const isAdmin = data.user.role === "admin";
+        // Obtener datos completos del usuario desde Firestore
+        const userData = await getUser(authUser.uid);
 
-        // Redirigimos dependiendo del rol
-        if (isAdmin) {
-          window.location.href = "admin.html";  // Redirige a la página del administrador
+        console.log('Usuario logueado:', userData);
+        // Guardar el UID y nombre en localStorage
+        localStorage.setItem("user_uid", authUser.uid);
+        localStorage.setItem("user_name", userData.name);
+
+        // Mostrar éxito
+        await Swal.fire({
+          icon: 'success',
+          title: `¡Bienvenido, ${userData.name}!`,
+          showConfirmButton: false,
+          timer: 1500
+        });
+
+        // Mostrar éxito
+        await Swal.fire({
+          icon: 'success',
+          title: `¡Bienvenido, ${userData.name}!`,
+          showConfirmButton: false,
+          timer: 1500
+        });
+
+        // Redirigir según el rol
+        if (userData.role === "admin") {
+          window.location.href = "admin.html";
         } else {
-          window.location.href = "dashboard.html";  // Redirige a la página del usuario normal
+          window.location.href = "dashboard.html";
         }
+
       } catch (err) {
         console.error("Login error:", err);
-        alert("Contraseña incorrecta.");
+        Swal.fire({
+          icon: 'error',
+          title: 'Login fallido',
+          text: 'Contraseña incorrecta o usuario no encontrado.'
+        });
       }
     }
-
   </script>
+
 
 </body>
 
