--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         div.onclick = () => promptPasswordAndLogin(user);
 
         div.innerHTML = `
-          <img src="https://via.placeholder.com/100" alt="${user.name}" />
+          <img src="assets/${user.name}.jpg" alt="${user.name}" />
           <span>${user.name}</span>
         `;
 
